--- a/EFI/CLOVER/kexts/Other/SMCDellSensors.kext/Contents/Info.plist
+++ b/EFI/CLOVER/kexts/Other/SMCDellSensors.kext/Contents/Info.plist
@@ -3,27 +3,27 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>19G2021</string>
+	<string>19F101</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
-	<string>SMCLightSensor</string>
+	<string>SMCDellSensors</string>
 	<key>CFBundleIdentifier</key>
-	<string>ru.usrsse2.SMCLightSensor</string>
+	<string>as.lvs1974.SMCDellSensors</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>SMCLightSensor</string>
+	<string>SMCDellSensors</string>
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.1.6</string>
+	<string>1.1.7</string>
 	<key>CFBundleSupportedPlatforms</key>
 	<array>
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.1.6</string>
+	<string>1.1.7</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
@@ -40,14 +40,25 @@
 	<string>11E708</string>
 	<key>IOKitPersonalities</key>
 	<dict>
-		<key>SMCLightSensor</key>
+		<key>SMCDellSensors</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>ru.usrsse2.SMCLightSensor</string>
+			<string>as.lvs1974.SMCDellSensors</string>
+			<key>FanMultiplier</key>
+			<integer>1</integer>
+			<key>FanNames</key>
+			<array>
+				<string>CPU Fan</string>
+				<string>System Fan</string>
+				<string>GPU Fan</string>
+				<string>PSU Fan</string>
+				<string>Chipset Fan</string>
+				<string>Other Fan</string>
+			</array>
 			<key>IOClass</key>
-			<string>SMCLightSensor</string>
+			<string>SMCDellSensors</string>
 			<key>IOMatchCategory</key>
-			<string>SMCLightSensor</string>
+			<string>SMCDellSensors</string>
 			<key>IOProviderClass</key>
 			<string>IOResources</string>
 			<key>IOResourceMatch</key>
@@ -55,9 +66,9 @@
 		</dict>
 	</dict>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.8</string>
+	<string>10.7</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2018 vit9696. All rights reserved.</string>
+	<string>Copyright © 2018 usrsse2. All rights reserved.</string>
 	<key>OSBundleCompatibleVersion</key>
 	<string>1.0.0</string>
 	<key>OSBundleLibraries</key>
@@ -66,20 +77,20 @@
 		<string>1.2.0</string>
 		<key>as.vit9696.VirtualSMC</key>
 		<string>1.0.0</string>
-		<key>com.apple.iokit.IOACPIFamily</key>
-		<string>1.0.0d1</string>
 		<key>com.apple.kpi.bsd</key>
-		<string>12.0.0</string>
+		<string>11.0.0</string>
 		<key>com.apple.kpi.dsep</key>
-		<string>12.0.0</string>
+		<string>11.0.0</string>
 		<key>com.apple.kpi.iokit</key>
-		<string>12.0.0</string>
+		<string>11.0.0</string>
 		<key>com.apple.kpi.libkern</key>
-		<string>12.0.0</string>
+		<string>11.0.0</string>
 		<key>com.apple.kpi.mach</key>
-		<string>12.0.0</string>
+		<string>11.0.0</string>
 		<key>com.apple.kpi.unsupported</key>
-		<string>12.0.0</string>
+		<string>11.0.0</string>
 	</dict>
+	<key>OSBundleRequired</key>
+	<string>Root</string>
 </dict>
 </plist>
